[package]
name = "rcli"
version = "0.1.0"
authors = ["Teago yu<yuhao120901@gmai.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.133", features = ["derive"] }
csv = { version = "1.1.6" }
anyhow = "1.0.98"
serde_json = "1.0.140"
serde_yaml = "0.9.33"
rand = "0.9.1"
zxcvbn = "3.1.0"
